# liasynth

./: .gitignore  Cargo.toml  README.md  bench.txt  cvc5_rf_120.txt  cvc_norw_runall.sh  cvc_runall.sh  cvc_runall_nia.sh  denest-all.sh  denest-mpwl.sh  denest.py  flame.sh  genresults.py  handle_mpwl.py  max4.sl  ok  python_frontend.py  run.sh  run_bench.py  runall.sh  runall_cleaned.sh  runall_dir.sh  stupid.sl  tmp.txt  tmp_withheuristic.txt  todo.org
benchmarking/: benchmark_1212_cvc5  grammar.txt  grammar_size.txt  grammar_ti.txt  grammar_twi.txt  grammar_wi.txt  ignore_grammar.txt  ignore_grammar_twi.txt  ignore_grammar_wi.txt  lr_grammar.txt
benchmarking2/: extract_table.py  grammar_d.txt  grammar_d_w.txt  grammar_d_wt.txt  grammar_l.txt  grammar_l_w.txt  grammar_l_wt.txt
benchmarking_120/: grammar_d_w.txt  grammar_d_wt.txt  grammar_l.txt  grammar_l_w.txt  grammar_l_wt.txt
benchmarking_60/: cvc5_bench.txt  grammar_d.txt  grammar_d_w.txt  grammar_d_wt.txt  grammar_l.txt  grammar_l_w.txt  grammar_l_wt.txt
examples/: max2_letfun.sl  max2_swap.sl  max2_swap_renamed.sl  max2_test.sl  qm_neg_eq_2.sl  stupid_bool.sl  unbdd_inv_gen_array.sl
lang/: Cargo.toml
results/: analysis.ipynb  cvc5_LIA_res.csv  cvc5_cLIA_res.csv  extract_data.py  lia_LIA_res.csv  lia_cLIA_res.csv  lia_simple_incremental.csv  lia_winning_incremental.csv  lia_winning_incremental_5_nodes_per_class.csv  lia_winning_incremental_res.csv  make_table.py  plots.py  result_table.py
src/: bayes.rs  core.rs  examples.rs  fmt.rs  g.rs  langdef.rs  langdef_old.rs  linearreg.rs  main.rs  mysynth.rs  (+10 more)
(+1008 files in other folders)
