[package]
name = "liasynth"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.12"
winnow = "0.7.12"
lazy_static = "1.5.0"
itertools = "0.14.0"
z3 = "0.13.3"
fxhash = "0.2.1"
lang = { path = "./lang" }
indexmap = "2.10.0"
serde = { version= "1.0.225", features= ["derive"] }
ordered-float = "5.0.0"

[profile.release]
debug = true

[features]
default = ["heuristic_default", "incremental_all"]
heuristic_default = []
heurisitc_perceptron = []

incremental_all = []
