[package]
name = "liasynth"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.12"
winnow = "0.7.12"
lazy_static = "1.5.0"
itertools = "0.14.0"
z3 = "0.19.1"
fxhash = "0.2.1"
lang = { path = "./lang" }
indexmap = "2.10.0"
serde = { version= "1.0.225", features= ["derive"] }
ordered-float = "5.0.0"
once_cell = "1"
dashmap   = "6"
signal-hook = "0.3"
rand = "0.9.2"
priority-queue = "2.7.0"
hashbrown = "0.16.1"
rand_distr = "0.5.1"

[profile.release]
debug = true

[features]
default = []
ignore-grammar = []
learned = []
random = []
simple = []
winning = []
total = []
